--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -30,7 +30,7 @@
         "import": "Importar",
         "filter": "Filtrar por nombre de logro",
         "hide-awarded": "Ocultar logros ganados",
-        "hide-unawarded": "Esconder sin premio",
+        "hide-unawarded": "Ocultar logros no ganados",
         "no-achievements-match-filter": "No hay logros que coincidan con su filtro.",
         "no-achievements-added": "Todavía no se han agregado logros."
       },
