--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -42,7 +42,7 @@
         "unowned": "Sin propietario",
         "click-to-remove": "Haga clic para eliminar",
         "click-to-award": "Haga clic para premiar",
-        "no-players-to-award": "No hay jugadores para otorgar."
+        "no-players-to-award": "No hay jugadores para premiar."
       },
       "add-achievement-form": {
         "id": "ID",
