--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -9,6 +9,10 @@
         "name": "Play Self Achievement Sounds",
         "hint": "Play a sound if you are awarded an achievement."
       },
+      "self-sound-volume": {
+        "name": "Self Achievement Sound Volume",
+        "hint": "The volume of the sound played when you are awarded an achievement."
+      },
       "hide-unearned": {
         "name": "Hide Unearned Achievements",
         "hint": "Completely hide unearned achievements from the player. (This takes precedence over the cloak setting.)"
