--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -9,6 +9,10 @@
         "name": "Reproducir Sonidos de Logro Personal",
         "hint": "Reproduce un sonido si recibes un logro."
       },
+      "self-sound-volume": {
+        "name": "Volumen de sonido de autocontrol",
+        "hint": "El volumen del sonido se reproduce cuando se le otorga un logro."
+      },
       "hide-unearned": {
         "name": "Ocultar logros no ganados",
         "hint": "Ocultar completamente los logros no ganados del jugador. (Esto tiene prioridad sobre la configuración de Cloak)."
