--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -55,7 +55,7 @@
         "image": "Imagen",
         "select": "Seleccionar",
         "sound": "Sonido",
-        "preview": "Avance",
+        "preview": "Previsualiza",
         "clear": "Clara",
         "add-achievement":"Agregar logro",
         "update-achievement":"Actualizar el logro"
