fix: corrected message display on achievement creation

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -65,7 +65,7 @@
       "achievements-imported": "Achievements imported from clipboard.",
       "achievements-exported": "Achievements exported to clipboard.",
       "achievement-updated": "Achievement updated.",
-      "achievement-aded": "Achievement added.",
+      "achievement-added": "Achievement added.",
       "duplicate-id": "An achievement with that ID already exists.",
       "id-no-spaces": "ID cannot contain spaces.",
       "invalid-achievement-format": "Invalid achievement format.",
