--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -65,7 +65,7 @@
       "achievements-imported": "Logros importados del portapapeles.",
       "achievements-exported": "Logros exportados al portapapeles.",
       "achievement-updated": "Logro actualizado.",
-      "achievement-aded":"Logro agregado.",
+      "achievement-added":"Logro agregado.",
       "duplicate-id": "Ya existe un logro con esa identificación.",
       "id-no-spaces": "ID no puede contener espacios.",
       "invalid-achievement-format": "Formato de logro no válido.",
