feat: You can now choose to show the title of an achievement if it is cloaked, on a per-achievement basis.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -55,6 +55,7 @@
       "add-achievement-form": {
         "id": "ID",
         "title": "Title",
+        "title-hiddenoption": "Show title if cloaked?",
         "description": "Description",
         "image": "Image",
         "select": "Select",
