feat: Achievements can now have a separate image when they are cloaked.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -57,6 +57,7 @@
         "title": "Title",
         "description": "Description",
         "image": "Image",
+        "cloaked-image": "Cloaked Image",
         "select": "Select",
         "sound": "Sound",
         "preview": "Preview",
