--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -57,7 +57,7 @@
         "title": "Title",
         "description": "Description",
         "image": "Image",
-        "cloaked-image": "Cloaked Image",
+        "cloaked-image": "Cloaked Image (Optional)",
         "select": "Select",
         "sound": "Sound",
         "preview": "Preview",
