--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -58,13 +58,14 @@
         "title-hiddenoption": "Show title if cloaked?",
         "description": "Description",
         "image": "Image",
-        "cloaked-image": "Cloaked Image (Optional)",
+        "cloaked-image": "Cloaked Image",
         "select": "Select",
         "sound": "Sound",
         "preview": "Preview",
         "clear": "Clear",
         "add-achievement": "Add Achievement",
-        "update-achievement": "Update Achievement"
+        "update-achievement": "Update Achievement",
+        "window-title": "Add/Edit Achievement"
       },
       "achievements-export": {
         "export-message": "Please copy the following data to a safe place, in case you need to restore it later."
