--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -37,6 +37,7 @@
         "filter": "Filtrar por nombre de logro",
         "hide-awarded": "Ocultar logros ganados",
         "hide-unawarded": "Ocultar logros no ganados",
+        "hide-details": "Ocultar detalles de logros",
         "no-achievements-match-filter": "No hay logros que coincidan con su filtro.",
         "no-achievements-added": "Todavía no se han agregado logros.",
         "bugreport": "Dar retroalimentación",
