--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -37,7 +37,7 @@
         "filter": "Filtrar por nombre de logro",
         "hide-awarded": "Ocultar logros ganados",
         "hide-unawarded": "Ocultar logros no ganados",
-        "hide-details": "Ocultar detalles de logros",
+        "hide-details": "Vista compacta",
         "no-achievements-match-filter": "No hay logros que coincidan con su filtro.",
         "no-achievements-added": "Todavía no se han agregado logros.",
         "bugreport": "Dar retroalimentación",
@@ -91,6 +91,10 @@
       "import-achievements": {
         "title": "Logros de importación",
         "content": "Esto sobrescribirá todos los logros existentes con datos de su portapapeles. ¿Está seguro?"
+      },
+      "delete-achievement": {
+        "title": "Eliminar el logro",
+        "content": "¿Estás seguro de que quieres borrar este logro?"
       }
     }
   }
