--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -52,7 +52,9 @@
         "unowned": "Unowned",
         "click-to-remove": "Click to remove",
         "click-to-award": "Click to award",
-        "no-players-to-award": "No players to award."
+        "no-players-to-award": "No players to award.",
+        "toggle-lock": "Lock",
+        "toggle-unlock": "Unlock"
       },
       "add-achievement-form": {
         "id": "ID",
