feat: Added the ability to assign/unassign an achievement to all players who have/don't have it.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -54,7 +54,8 @@
         "click-to-award": "Click to award",
         "no-players-to-award": "No players to award.",
         "toggle-lock": "Lock",
-        "toggle-unlock": "Unlock"
+        "toggle-unlock": "Unlock",
+        "all-players": "All Players"
       },
       "add-achievement-form": {
         "id": "ID",
