--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -54,7 +54,8 @@
         "click-to-award": "Haga clic para premiar",
         "no-players-to-award": "No hay jugadores para premiar.",
         "toggle-lock": "Alternar bloqueo",
-        "toggle-unlock": "Alternar desbloqueo"
+        "toggle-unlock": "Alternar desbloqueo",
+        "all-players": "Todos los jugadores"
       },
       "add-achievement-form": {
         "id": "ID",
