--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -96,7 +96,7 @@
         "content": "Esto sobrescribirá todos los logros existentes con datos de su portapapeles. ¿Está seguro?"
       },
       "while-away": "Mientras estaban fuera",
-      "has-unlocked": "{character_name} ({player_name}) ha desbloqueado",
+      "has-unlocked": "{while_away} {character_name} ({player_name}) ha desbloqueado",
       "next-login-notify": "Se le notificará en su próximo inicio de sesión.",
       "delete-achievement": {
         "title": "Eliminar el logro",
