--- a/src/lang/pt-BR.json
+++ b/src/lang/pt-BR.json
@@ -96,7 +96,7 @@
         "content": "Isso irá sobrescrever todas as Conquistas existentes com os dados do clipboard. Tem certeza?"
       },
       "while-away": "Enquanto estavam fora",
-      "has-unlocked": "{character_name} ({player_name}) desbloqueou",
+      "has-unlocked": "{while_away} {character_name} ({player_name}) alcançou",
       "next-login-notify": "Eles serão notificados no próximo login.",
       "delete-achievement": {
         "title": "Deletar Conquista",
