--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -55,7 +55,8 @@
         "no-players-to-award": "No hay jugadores para premiar.",
         "toggle-lock": "Alternar bloqueo",
         "toggle-unlock": "Alternar desbloqueo",
-        "all-players": "Todos los jugadores"
+        "all-players": "Todos los jugadores",
+        "tags": "Etiquetas"
       },
       "add-achievement-form": {
         "id": "ID",
@@ -70,7 +71,8 @@
         "clear": "Clara",
         "add-achievement":"Agregar Logro",
         "update-achievement":"Actualizar el Logro",
-        "window-title": "Agregar/Editar Logro"
+        "window-title": "Agregar/Editar Logro",
+        "tags":"Etiquetas"
       },
       "achievements-export": {
         "export-message": "Por favor, copia los siguientes datos en un lugar seguro, en caso de que necesites restaurarlos más tarde."
