--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -9,6 +9,10 @@
         "name": "Play Self Achievement Sounds",
         "hint": "Play a sound if you are awarded an achievement."
       },
+      "default-sound-file": {
+        "name": "Default Sound File",
+        "hint": "The default sound file to play when an achievement is awarded."
+      },
       "hide-unearned": {
         "name": "Hide Unearned Achievements",
         "hint": "Completely hide unearned achievements from the player. (This takes precedence over the cloak setting.)"
