--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -106,7 +106,8 @@
       "delete-achievement": {
         "title": "Delete Achievement",
         "content": "Are you sure you want to delete this achievement?"
-      }
+      },
+      "achievement-id-copied": "Achievement ID copied to clipboard."
     }
   }
 }
