--- a/src/lang/pt-BR.json
+++ b/src/lang/pt-BR.json
@@ -32,8 +32,8 @@
     },
     "forms": {
       "achievements-sheet": {
-        "all-players": "Todos Jogadores",
-        "online-players": "Jogadores on-line",
+        "all-actors": "Todos os Atores",
+        "online-actors": "Atores on-line",
         "add-achievement": "Adicionar Conquista",
         "export": "Exportar",
         "export-achievements": "Exportar dados de conquista para o clipboard",
@@ -57,10 +57,10 @@
         "unowned": "não-alcançada",
         "click-to-remove": "Click para remover",
         "click-to-award": "Click para entregar",
-        "no-players-to-award": "Nenhum jogador para entregar.",
+        "no-actors-to-award": "Nenhum ator a ser premiado",
         "toggle-lock": "Trancar",
         "toggle-unlock": "Destrancar",
-        "all-players": "Todos Jogadores",
+        "all-actors": "Todos os Atores",
         "tags": "Tags"
       },
       "add-achievement-form": {
