feat: DMs have an option to only see online actors when awarding achievements. Fixes #63

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -34,6 +34,7 @@
       "achievements-sheet": {
         "all-actors": "All Actors",
         "online-actors": "Online Actors",
+        "only-online-actors": "Show only online Actors",
         "add-achievement": "Add Achievement",
         "export": "Export",
         "export-achievements": "Export achievement data to clipboard",
