--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -28,6 +28,14 @@
       "show-tags-to-players": {
         "name": "Show tags to Players",
         "hint": "Show tags to players, allowing them to filter as well."
+      },
+      "cloak-title-text": {
+        "name": "Cloak Title Text",
+        "hint": "Text to show when an achievement title is cloaked."
+      },
+      "cloak-description-text": {
+        "name": "Cloak Description Text",
+        "hint": "Text to show when an achievement description is cloaked."
       }
     },
     "forms": {
